--- a/style.css
+++ b/style.css
@@ -1,45 +1,173 @@
 * {
-  margin: 0;
+  font-family: "Roboto", "Helvetica", sans-serif;
   padding: 0;
-  background-color: "white";
+  margin: 0;
+}
+
+h2 {
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+}
+
+a {
+  font-weight: bold;
+  text-decoration: none;
+  color: white;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.icon.dash {
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
+  padding: 5px;
+}
+
+.icon {
+  width: 24px;
+  height: 24px;
+  flex-shrink: 0;
+  padding: 10px;
 }
 
 .wrapper {
+  height: 100vh;
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
-  grid-template-rows: 1fr 2fr 2fr;
+  grid-template-columns: 250px 1fr;
 }
 
+/* SIDEPANEL */
 .sidepanel {
+  background-color: #3599c9;
   display: grid;
-  grid-area: 1 / 1 / 4 / 2;
-  background-color: blue;
+  grid-template-rows: 1fr 5fr 2fr;
+  padding-left: 20px;
 }
 
+/* HEADER */
 .header {
   display: grid;
-  grid-area: 1 / 2 / 2 / 4;
-  background-color: grey;
+  padding: 20px;
+  gap: 20px;
+}
+
+.profile-picture.small {
+  border-radius: 50px;
+  height: 24px;
+  width: 24px;
+}
+
+.profile-picture.large {
+  border-radius: 50px;
+  height: 48px;
+  width: 48px;
+}
+
+/* ROW 1 */
+.header-row-1 {
+  display: flex;
+  align-items: center;
+}
+
+.search-unit {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  flex: 1;
+}
+
+.searchbar {
+  flex: 1;
+  background-color: #e1e0df;
+  border-radius: 12px;
+  padding: 6px 12px;
+  border: none;
+  outline: none;
+  font-size: 16px;
+}
+
+.user-unit {
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  gap: 12px;
+}
+
+/* ROW 2 */
+.header-row-2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.identity {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.greeter {
+  display: flex;
+  flex-direction: column;
+}
+
+.greeting {
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.fullname {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.header-actions {
+  display: flex;
+  gap: 12px;
+}
+
+.header-actions button {
+  padding: 8px 16px;
+  border-radius: 18px;
+  border: none;
+  background-color: #3599c9;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+/* CONTENTS */
+.contents {
+  background-color: #e4e4e0;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-gap: 10px;
+  padding: 30px;
 }
 
 .projects {
   display: grid;
-  grid-area: 2 / 2 / 4 / 3;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 1fr;
+  grid-area: 1/ 1 / 2 / 2;
+  grid-gap: 10px;
 }
 
 .card {
-  background-color: red;
+  background-color: white;
+  border-radius: 6px;
+  padding: 10px;
+  border-left: 6px solid orange;
 }
 
-.announcements {
-  display: grid;
-  grid-area: 2 / 3 / 3 / 4;
-  background-color: teal;
+.card.announcements {
+  grid-area: 1 / 2;
+  border: none;
 }
 
-.trending {
-  display: grid;
-  grid-area: 3 / 3 / 4 / 4;
-  background-color: tan;
+.card.trending {
+  grid-area: 2 / 2;
+  border: none;
 }
